update tooltip and fix z-index

--- a/src/components/popup/Tooltip/Tooltip.module.css
+++ b/src/components/popup/Tooltip/Tooltip.module.css
@@ -11,7 +11,8 @@
   border-radius: .25rem;
   font-size: small;
 
-  box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 16px var(--box-shadow-color);
+  color: var(--text-color-t90);
 
   transform-origin: top;
   animation-duration: 120ms;
